bug fixed: wrong margin on stuffs blocks
git-svn-id: http://piwigo.org/svn/extensions/PWG_Stuffs/trunk@17763 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/theme/stuffs_index.css
+++ b/theme/stuffs_index.css
@@ -1,5 +1,6 @@
 .content {
   min-height: 0;
+  margin-bottom:1em;
 }
 
 .stuffs_block {
